@@ -1,3 +1,8 @@
+2004-05-15  Pierre <pierrebenz@users.sf.net>
+
+	* changed settings directory to .gnomesword-2.0
+	
+	
 2004-05-15 Terry <tbiggs@users.sf.net>
 
 	* revomed backend/mgr.hh and backend/mgr.cc
